RD-2008-01-28-2: Bugfix:    enabled all runlevels for qdel test
                 Review:    JG

RD-2008-01-28-1: Bugfix:    removed use of obsolete message macros
                 Review:    JG

RD-2008-01-28-0: Enhancem.: disabled drmaa 0.95 for 6.2
                 Review:    AH

MP-2008-01-25-0: Enhancem.: Added test for IZ 2465 dealing with unwanted error
                            message when job not running due to RQs
                 Issue:     2465
                 Review:    OJ

JG-2008-01-24-0: Bugfix:    Fixed authuser test.
                 Review:    RH
                 Enhancem.: Close rlogin connections that have been idle for
                            more than 10 minutes.
                 Review:    CR
                 Enhancem.: Use the logging framework (JG-2008-01-16-0) for all
                            checks in checktree/system_tests.

CR-2008-01-24-3: Bugfix:    o ts menu "4" exit should ask for root pw if needed
                            o fixed hedeby tests "issue_67" and "issue_88"
                 Review:    RH

RH-2008-01-24-2: Bugfix:    Missing globals in hedeby util fixed
                 Review:    CR

RH-2008-01-24-1: Bugfix:    output variable of get_conf_object will be initialized
                 Review:    JG

CR-2008-01-24-1: Enhancm.   enhanced hedeby installation to support ge services
                 Review:    RH

CR-2008-01-24-0: Bugfix:    o logging.tcl was not sourced in source_tcl_files()
                            o enhanced hedeby configuration checking
                 Review:    RH

RH-2008-01-23-0: Bugfix:    tcl error in setup_schedconf fixed
                 Review:    JG

RD-2008-01-23-0: Enhancem.: Added test for advance reservation hard/soft error
                 Review:    JG

OJ-2008-01-23-0: Enhancem.: Added test case 2387 at bugs/issuezilla/2387.
                 Issue:     2387
                 Review:    JG

RM-2008-01-22-0: Enhancem.: Updated parsing for new sdmadm suj hedeby command