@@ -44,6 +44,7 @@ append_check_and_exclude_in_jgdi "qconf_dynamic_limit" "RQS file format not comp
 append_check_and_exclude_in_jgdi "qconf_rqs_Xattr" "RQS file format not completetly handled yet";          # resource quota set Xattr
 append_check_and_exclude_in_jgdi "qconf_rqs_rattr_qmaster_dump" "RQS file format not completetly handled yet"; # verify error handling
 append_check_and_exclude_in_jgdi "qconf_issue_2383" "-mc fails for maintrunk" ;# TS case for IZ 2383
+append_check_and_exclude_in_jgdi "qconf_issue_2445" "Test for IZ 2445" ; # TS case for IZ 2445
 
 global rqs_name_fast
 global rqs_name_cli
@@ -460,3 +461,68 @@ proc qconf_issue_2383 {} {
    }
 }
 
+
+############# qconf/qconf_issue_2445() *********************************************
+#  NAME
+#     issue_2383() -- test qconf -mq with wrong shell path
+#
+#  SYNOPSIS
+#     issue_2445 { }
+#
+#  FUNCTION
+#     Test adding wrong shell path with qconf -mq
+#
+#     The shell path is defined as
+#     shell  NONE
+#     so it is wrong the urgency value. It is a negative test.
+#     The install should report message MSG_CQUEUE_UNKNOWNSHELL_S
+#
+#     We also test that a job submitted with -S NONE goes into Eqw state.
+#
+#*******************************************************************************
+
+proc qconf_issue_2445  {} {
+   global ts_config CHECK_USER
+  
+   set arch [resolve_arch $ts_config(master_host)]
+   set host $ts_config(master_host)
+   
+   # Try to modify shell setting to "NONE" via "qconf -mq test_queue.q"
+   # set shell to "NONE"
+   set change_array(shell) "NONE"
+   set result [mod_queue test_queue.q "" change_array  0 $host $CHECK_USER 0]
+   
+   # check that we get the correct error message MSG_CENTRY_NULL_URGENCY
+   if {$result != -2 &&  $result != -999 } {
+      ts_log_config "qconf -mq test for IZ 2445 failed. result was $result \n"
+   } else {
+      ts_log_fine " qconf -mq test for IZ 2445 passed \n"
+   }
+
+   # Submit now job with -S NONE. Check that it goes in Error state.
+
+   set shell_param "-S NONE"
+   set t_io_parameter "-o /dev/null -e /dev/null"
+   set sleep_t 30
+   set t_cmd "$ts_config(product_root)/examples/jobs/sleeper.sh $sleep_t"
+   set t_qsub_arguments "$shell_param $t_io_parameter $t_cmd"
+   set job_id [submit_job $t_qsub_arguments]
+
+   wait_for_job_state $job_id "Eqw" 60
+   
+   set E_state_ok 0
+   set job_state [get_job_state $job_id]
+   if {[string compare $job_state "Eqw"] == 0} {
+      set E_state_ok 1
+   }
+
+   if {$E_state_ok != 1} {
+      ts_log_config  \
+      "Job did not switch into E state in qsub -S NONE scenario. \
+       E_state_ok was $E_state_ok, job_state was $job_state. \n "
+   } else {
+      ts_log_fine  " qsub -S NONE negative test for IZ 2445 passed \n"
+   }
+
+
+}
